# novaxcli

./: Cargo.toml  README.md
abi/: erc20.abi  novax_game.abi  novax_planet.abi
src/: main.rs  utils.rs
